# intelligent-robotics-ros2

./: README.md  RESOURCES.md
src/01_basics/: package.xml
src/01_basics/basics/: talker.py
src/02_robot_description/urdf/: rrbot.urdf
src/03_gazebo_simulation/: README.md  setup.py
src/03_gazebo_simulation/config/: display_robot.rviz
src/03_gazebo_simulation/launch/: bringup_two_r_robot.launch.py  sim_two_r_robot.launch.py
src/03_gazebo_simulation/urdf/: two_r_robot.urdf
src/04_sensor/: README.md  package.xml  setup.py
src/04_sensor/config/: bridge.yaml  sensor_robot.rviz
src/04_sensor/launch/: sim_sensor_robot.launch.py  sim_sensor_robot_classic.launch.py
src/04_sensor/sensor/: camera_subscriber.py  depth_image_visualizer.py  lidar_subscriber.py
src/04_sensor/urdf/: sensor_robot.urdf  sensor_robot_classic.urdf
src/04_sensor/worlds/: sensor_world.sdf  sensor_world_classic.world
src/05_slam/: README.md  package.xml  setup.py
src/05_slam/config/: localization.rviz  slam_params.yaml
src/05_slam/launch/: localization.launch.py  slam.launch.py
src/05_slam/worlds/: slam_world.sdf
src/06_nav2/: README.md  package.xml  setup.py
src/06_nav2/config/: nav2_params.yaml  navigation.rviz
src/06_nav2/launch/: navigation.launch.py
src/06_nav2/nav2/: waypoint_navigator.py
src/07_moveit2/: CMakeLists.txt  README.md  package.xml
src/07_moveit2/config/: panda_moveit_config_demo.rviz  ros2_controllers_demo.yaml  ros2_controllers_sim.yaml
src/07_moveit2/launch/: demo.launch.py  pick_and_place.launch.py  sim.launch.py
src/07_moveit2/rrrbot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/07_moveit2/rrrbot_moveit_config/config/: RRRbot.ros2_control.xacro  RRRbot.srdf  RRRbot.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml
src/07_moveit2/rrrbot_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py
src/07_moveit2/scripts/: pick_and_place.py  plan_and_execute.py  print_ee_pose.py  scene_publisher.py
src/07_moveit2/urdf/: panda.urdf  panda_fake.urdf.xacro  panda_gazebo.urdf.xacro
src/07_moveit2/worlds/: pick_and_place.sdf  table.sdf
src/08_extra/dynamic_actor/: CMakeLists.txt  README.md  package.xml
src/08_extra/dynamic_actor/dynamic_actor/: actor_pose_subscriber.py
src/08_extra/dynamic_actor/launch/: dynamic_actor.launch.py
src/08_extra/dynamic_actor/meshes/: actor.dae
src/08_extra/dynamic_actor/src/: ActorPosePublisher.cc  AttachModelPlugin.cc  TrajectoryActorPlugin.cc
src/08_extra/dynamic_actor/worlds/: actor_world.sdf
src/08_extra/multi_robot/: README.md  package.xml  setup.py
src/08_extra/multi_robot/config/: multi_robot.rviz  nav2_params.yaml
src/08_extra/multi_robot/launch/: multi_robot.launch.py  robot_nav.launch.py
src/08_extra/multi_robot/urdf/: multi_robot.urdf.xacro  robot.urdf.xacro
