<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sensor</name>
  <version>0.0.1</version>
  <description>LiDAR and RGB camera simulation with Gazebo Fortress</description>
  <maintainer email="songd@ewha.ac.kr">Daeun Song</maintainer>
  <license>Apache-2.0</license>

  <!-- Python node -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>
  <exec_depend>rosgraph_msgs</exec_depend>

  <!-- Robot description -->
  <exec_depend>robot_state_publisher</exec_depend>

  <!-- Gazebo Fortress -->
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>

  <!-- Image processing -->
  <exec_depend>cv_bridge</exec_depend>

  <!-- Visualization -->
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
