<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dynamic_actor</name>
  <version>0.0.1</version>
  <description>Dynamic actor example using a custom DAE mesh in Gazebo Fortress</description>
  <maintainer email="songd@ewha.ac.kr">Daeun Song</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- C++ plugin -->
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>

  <!-- Python node -->
  <exec_depend>python3-rclpy</exec_depend>
  <exec_depend>ros2pkg</exec_depend>

  <!-- Gazebo Fortress -->
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
